# Medical-Report-Generator-multi-agent

./: .env.exemple  README.md  pyproject.toml  reports.db
input_data/: abdominal_mri.txt  brain_mri.txt  chest_ct.txt
knowledge/templates/: irm_template.txt
src/medical_report_generator/: crew.py  main.py
src/medical_report_generator/config/: agents.yaml  tasks.yaml
src/medical_report_generator/tools/: __init__.py  classifier_tool.py  rag_tool.py
templates/: report_template.docx
